Fix issue where scale shrank on mobile

--- a/draft-packages/rating-scale-legacy/KaizenDraft/RatingScaleLegacy/styles.module.scss
+++ b/draft-packages/rating-scale-legacy/KaizenDraft/RatingScaleLegacy/styles.module.scss
@@ -103,8 +103,6 @@ $fifth: mix($start, $end, 0%);
 
   @include respond-to(iphone) {
     margin: 0 auto;
-    width: auto;
-    height: auto;
     max-width: 258px;
     position: static;
   }
